<resources>
    <string name="app_name">Test_DB</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Meassure">Сделать запись</string>
    <string name="Settings">Настройки</string>
    <string name="History">История</string>
    <string name="User">Пользователь</string>
    <string name="email">e-mail</string>
    <string name="Name">Name</string>
    <string name="AddName">Add Name</string>
    <string name="Id">Id</string>
    <string name="EnterAge">Id</string>
    <string name="EnterEmail">E-mail</string>
    <string name="adduser">AddUser</string>
</resources>
