<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User_Activity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvId"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/Id" />

            <EditText
                android:id="@+id/etId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/EnterAge"
                android:inputType="numberSigned"
                android:padding="10dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tvName"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/Name" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/AddName"
                android:padding="10dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tvEmail"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/email" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/EnterEmail"
                android:padding="10dp" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adduser" />

</android.support.constraint.ConstraintLayout>